[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Richard Tjerngren <rtjerngren@spotify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
array_tool = "0.4.0"
num = "0.2.0"
#piston = "0.49.0"
#piston2d-graphics = "0.35.0"
#pistoncore-glutin_window = "0.63.0"
#piston2d-opengl_graphics = "0.69.0"
